# Fusion

./: .gitignore
Source/Application/: CMakeLists.txt
Source/Application/Private/: AppWindow.cpp  Application.cpp  FontManager.cpp  ImGuiOpenGLRenderer.cpp  ImGuiWindow.cpp  InputManager.cpp  WidgetRepo.cpp
Source/Application/Public/: Activatable.h  AppWindow.h  Application.h  Destroyable.h  FontManager.h  ImGuiOpenGLRenderer.h  ImGuiWindow.h  Initializable.h  InputManager.h  Renderable.h  Updateable.h  Widget.h  WidgetRepo.h  WindowFlags.h
Source/Common/: CMakeLists.txt
Source/Common/Public/: Buffer.h  Dims.h  FuAssert.h  NoCopyAssign.h  Rational.h
Source/Common/Test/: CMakeLists.txt  TestBuffer.cpp
Source/Fusion/: CMakeLists.txt
Source/Fusion/Private/Core/: Coordination.cpp  LoadTextureFromFile.cpp  SettingsRepo.cpp  UIRxDispatcher.cpp
Source/Fusion/Private/Models/: AnimationModel.cpp  AssetLoadingModel.cpp  DepthEstimationModel.cpp  FileExplorerModel.cpp  FuImportModel.cpp  FusedExportModel.cpp  IlluminationEstimationModel.cpp  LoggerModel.cpp  MentorLayerExportModel.cpp  NormalsEstimationModel.cpp  OmniconnectModel.cpp  PerfcapPlayerModel.cpp  PlayerModel.cpp  ProjectModel.cpp  RayTracingModel.cpp  SequencerModel.cpp  VideoTracingModel.cpp  WindowsMenuModel.cpp
Source/Fusion/Private/Presenters/: FileExplorerPresenter.cpp  FileMenuPresenter.cpp  FiltersMenuPresenter.cpp  FuImportPresenter.cpp  FusedExportPresenter.cpp  IlluminationResultPresenter.cpp  MainToolbarPresenter.cpp  NormalsResultPresenter.cpp  OmniconnectMenuPresenter.cpp  PerfcapPlayerPresenter.cpp  PlayerControllerPresenter.cpp  PlayerViewportPresenter.cpp  ProgressBarPresenter.cpp  RayTracingPresenter.cpp  SequencerPresenter.cpp  TransformationsPresenter.cpp  WindowsMenuPresenter.cpp
Source/Fusion/Private/Settings/: DepthEstimationSettings.cpp  FuImportSettings.cpp  IlluminationEstimationSettings.cpp  LoggerSettings.cpp  NormalEstimationSettings.cpp  OmniconnectSettings.cpp  PlayerSettings.cpp  ProjectSettings.cpp  RayTracingSettings.cpp  RayTracingViewportSettings.cpp  WindowsMenuSettings.cpp
Source/Fusion/Private/Views/: DepthEstimationSettingsView.cpp  FileExplorerView.cpp  IlluminationResultView.cpp  MainToolbarView.cpp  NormalsResultView.cpp  OmniconnectVideoListView.cpp  PlayerControllerView.cpp  PlayerViewportView.cpp  PlayerViewportView.h  ProgressBarView.cpp  RayTracingControlView.cpp  RayTracingView.cpp  SequencerView.cpp  TransformationView.cpp
Source/Fusion/Public/Core/: AssetTypeResolver.h  Camera.h  Coordination.h  DepthColorToPCL.h  DepthEstimationModels.h  DirEntry.h  GPUContext.h  Helpers.h  OmniconnectVideoElement.h  SequenceItem.h  Settings.h  SettingsRepo.h  SimpleTask.h  ThreadSafeQueue.h  UIRxDispatcher.h
Source/Fusion/Public/Models/: AnimationModel.h  AssetLoadingModel.h  DepthEstimationModel.h  FileExplorerModel.h  FuImportModel.h  FusedExportModel.h  IlluminationEstimationModel.h  LoggerModel.h  MentorLayerExportModel.h  NormalsEstimationModel.h  OmniConnectModel.h  PerfcapPlayerModel.h  PlayerModel.h  ProjectModel.h  RayTracingModel.h  SequencerModel.h  VideoTracingModel.h  WindowsMenuModel.h  WorkspaceModel.h
Source/Fusion/Public/Presenters/: FileExplorerPresenter.h  FileMenuPresenter.h  FiltersMenuPresenter.h  FuImportPresenter.h  FusedExportPresenter.h  IlluminationResultPresenter.h  MainToolbarPresenter.h  NormalsResultPresenter.h  OmniconnectMenuPresenter.h  PerfcapPlayerPresenter.h  PlayerControllerPresenter.h  PlayerViewportPresenter.h  ProgressBarPresenter.h  RayTracingPresenter.h  SequencerPresenter.h  TransformationsPresenter.h  WindowsMenuPresenter.h
Source/Fusion/Public/Settings/: DepthEstimationSettings.h  FuImportSettings.h  IlluminationEstimationSettings.h  LoggerSettings.h  NormalEstimationSettings.h  OmniconnectSettings.h  PerfcapPlayerSettings.h  PlayerSettings.h  ProjectSettings.h  RayTracingSettings.h  RayTracingViewportSettings.h  WindowsMenuSettings.h
Source/Fusion/Public/Views/: DepthEstimationSettingsView.h  FileExplorerView.h  IlluminationResultView.h  MainToolbarView.h  NormalsResultView.h  OmniconnectVideoListView.h  PlayerControllerView.h  PlayerViewportView.h  ProgressBarView.h  RayTracingControlView.h  RayTracingView.h  SequencerView.h  TransformationView.h
Source/Fusion/Public/di/: AppDi.h
Source/Fusion/Source/: main.cpp
Source/Lib/: CMakeLists.txt
Source/Lib/Application/: CMakeLists.txt
Source/Lib/Application/Private/: Application.cpp  FontManager.cpp  ImGuiOpenGLRenderer.cpp  ImGuiWindow.cpp  InputManager.cpp
Source/Lib/Application/Public/: AppWindow.h  Application.h  FontDef.h  Initializable.h  ObsCoordination.h  Renderable.h  Updateable.h  WidgetRepo.h  WindowFlags.h
Source/Lib/Common/: CMakeLists.txt
Source/Lib/Common/Public/: Buffer.h  DebugMsg.h  Device.h  DistortionCoefficients.h  ReadFileBytes.h  Skeleton.h
Source/Lib/Common/Test/: CMakeLists.txt  TestBuffer.cpp
Source/Lib/IO/: CMakeLists.txt
Source/Lib/IO/Private/: JpegCompressor.cpp  Load3DAsset.cpp  PerfcapImporter.cpp
Source/Lib/IO/Public/: Asset.h  Bone.h  Load3DAsset.h  LoadObj.h  LoadPly.h  MeshData.h  PerfcapAnimationData.h  PerfcapAnimationDataImport.h  PerfcapCalibrationImport.h  PerfcapMeshData.h  PerfcapSkeletonImport.h  PerfcapSkinningDataImport.h  PerfcapTemplateImport.h  PerfcapTrackedData.h  PerfcapTrackedParamsImport.h  SavePly.h  TrackedData.h  VolcapCameraData.h
Source/Lib/OptixRayTracer/: CMakeLists.txt
Source/Lib/VideoTranscoder/: CMakeLists.txt
Source/MultiViewTexturing/: CMakeLists.txt
Source/MultiViewTexturing/Source/: main.cpp  maincli.cpp
Source/OptixRayTracer/: CMakeLists.txt
Source/OptixRayTracer/Public/: OptixRayTracer.h
Source/VideoTranscoder/: CMakeLists.txt
Source/VideoTranscoder/Private/: DecodingNode.cpp  EncodingContext.cpp  ScalingNode.cpp  Transcoder.cpp
Source/VideoTranscoder/Public/: ConvertYUV2RGB.h  DecodingContext.h  DecodingNode.h  EncodingContext.h  PixelFormatMap.h  ScalingNode.h  Stream.h  Transcoder.h  VideoFrame.h
Source/VideoTranscoder/Test/: CMakeLists.txt  TestDecoder.cpp
(+156 files in other folders)
